WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
153901
Outline does not clip when ancestor has overflow: hidden and requires layer.
https://bugs.webkit.org/show_bug.cgi?id=153901
Summary
Outline does not clip when ancestor has overflow: hidden and requires layer.
alan
Reported
2016-02-04 16:01:58 PST
Created
attachment 270701
[details]
Outline clipping issue We clip outline properly as long as the ancestor does not require a layer.
Attachments
Outline clipping issue
(375 bytes, text/html)
2016-02-04 16:01 PST
,
alan
no flags
Details
Patch
(314.87 KB, patch)
2016-02-06 17:41 PST
,
alan
hyatt
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-02-06 17:41:40 PST
Created
attachment 270808
[details]
Patch
Dave Hyatt
Comment 2
2016-02-07 10:46:39 PST
Comment on
attachment 270808
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2016-02-07 13:42:30 PST
Comment on
attachment 270808
[details]
Patch Rejecting
attachment 270808
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 270808, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://webkit-queues.webkit.org/results/797066
alan
Comment 4
2016-02-07 16:33:47 PST
Committed
r196244
: <
http://trac.webkit.org/changeset/196244
>
Ryan Haddad
Comment 5
2016-02-08 17:00:49 PST
Thanks for the Mac rebaselines! It looks like there are still ~100 failing tests on ios-simulator and ~90 on Windows after this change.
alan
Comment 6
2016-02-08 17:14:34 PST
(In reply to
comment #5
)
> Thanks for the Mac rebaselines! It looks like there are still ~100 failing > tests on ios-simulator and ~90 on Windows after this change.
Oops, I'll take care of them. :(
Hunseop Jeong
Comment 7
2016-02-15 20:43:21 PST
[EFL] Rebaseline after
r196244
. Committed
r196615
: <
http://trac.webkit.org/changeset/196615
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug